--- a/tictactoe/style.css
+++ b/tictactoe/style.css
@@ -14,9 +14,24 @@ body{
 
 }
 
-h1{
+h1 {
+    text-shadow: 2px 2px rgb(219, 193, 193);
     font-size: 4rem;
- 
+    overflow: hidden;
+    /* The typwriter cursor */
+    white-space: nowrap;
+    animation: typing 4s steps(30, end), blink-caret .5s step-end;
+}
+
+/* The typing effect */
+
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
 }
 
 
