--- a/tictactoe/style.css
+++ b/tictactoe/style.css
@@ -16,7 +16,7 @@ body{
 
 h1 {
     text-shadow: 2px 2px rgb(219, 193, 193);
-    font-size: 3rem;
+    font-size: 4rem;
     overflow: hidden;
     /* The typwriter cursor */
     white-space: nowrap;
@@ -191,5 +191,10 @@ h1 {
 .winning-message.show{
     display: flex;
 
+}
+@media only screen and ( max-width: 720px) {
+    h1 {
+        font-size: 3rem;
+    }
 }
 
