--- a/css/phone.css
+++ b/css/phone.css
@@ -6,6 +6,7 @@
     .topnav a.icon {
       float: right;
       display: block;
+      background-color: antiquewhite
     }
   }
   
@@ -53,6 +54,8 @@
       float: none;
       display: block;
       text-align: left;
+      padding: 4px 0px;
+      font-size: 15px;
     }
 
       #about{
